--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+_site/
+*.pyc
+.DS_Store
+.doit.db
+cache/
+output/
 .DS_Store
 "Icon\r"
 .dropbox
@@ -8,7 +14,6 @@ TESTS_TRAME/
 posts/.ipynb_checkpoints
 .ipynb_checkpoints
 src/elasticite.egg-info
-files
 posts/__temp__*
 screenshot.png
 Iconr
