--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ src/elasticite.egg-info
 posts/__temp__*
 screenshot.png
 Iconr
+elasticite/elasticite.egg-info/dependency_links.txt
+elasticite/elasticite.egg-info/PKG-INFO
+elasticite/elasticite.egg-info/SOURCES.txt
+elasticite/elasticite.egg-info/top_level.txt
+files/2018-11-20_screenshot grille_v1_tore.mov
+files/2018-11-19_screenshot grille_v1_tore.mov
